--- a/src/app/ui/components/articles/create-article/create-article.component.html
+++ b/src/app/ui/components/articles/create-article/create-article.component.html
@@ -65,6 +65,30 @@
     </div>
   </div>
 
+  <!-- URL de la Imagen -->
+  <div class="form-group mb-3">
+    <label for="imageUrl" class="form-label fw-bold">URL de la Imagen</label>
+    <div class="input-group">
+      <span class="input-group-text">
+        <i class="bi bi-image"></i>
+      </span>
+      <input
+        type="url"
+        id="imageUrl"
+        formControlName="imageUrl"
+        class="form-control"
+        [class.is-invalid]="articleForm.get('imageUrl')?.invalid && articleForm.get('imageUrl')?.touched"
+        placeholder="Ingrese la URL de la imagen"
+      />
+    </div>
+    <div
+      *ngIf="articleForm.get('imageUrl')?.invalid && articleForm.get('imageUrl')?.touched"
+      class="invalid-feedback"
+    >
+      Por favor, ingrese una URL válida para la imagen.
+    </div>
+  </div>
+
   <!-- Precio del Artículo -->
   <div class="form-group mb-3">
     <label for="price" class="form-label fw-bold">Precio</label>
@@ -121,7 +145,9 @@
       class="btn btn-primary btn-lg w-100"
       [disabled]="!articleForm.valid || isLoading"
     >
-      <i class="bi bi-plus-circle"></i> Crear Artículo
+      <i class="bi bi-plus-circle"></i>     {{ isEditMode ? 'Actualizar artículo' : 'Crear artículo' }}
+
     </button>
   </div>
 </form>
+
